# StudyLoom

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
agents/: claude.yaml  openai.yaml
browser-extension/: content-script.js  export-current-page.js  manifest.json
docs/: alpha-issue-seeds.md  alpha-risk-report.md  architecture.md  browser-capture.md  browser-extension-hardening.md  compliance.md  fresh-clone-validation.md  github-release-steps.md  learning-mode-patterns.md  local-ocr-asr.md  low-risk-ingestion.md  mcp-agent-tools.md  pdf-export.md  personalized-learning.md  public-alpha-triage.md  real-world-fixture-checklist.md  real-world-validation-results.md  release-checklist.md  roadmap.md  source-adapter-research.md  source-adapters.md  source-capability-matrix.md  source-fidelity.md  template-packs.md  wiki-mindmap.md
evals/: README.md  __init__.py  run_eval.py
examples/: README.md
mcp/: README.md  __init__.py  schemas.py  server.py  tools.py
tests/: __init__.py  test_adapter_contracts.py  test_agent_skills.py  test_blocked_sources.py  test_browser_extension_hardening.py  test_citation_verifier.py  test_cli_flow.py  test_demo_workflow.py  test_evals.py  test_evidence_index.py  test_export_formats.py  test_local_ocr_asr.py  test_low_risk_ingestion.py  test_manifest_cache_policy.py  test_markdown_exporter.py  test_mcp_tools.py  test_office_adapters.py  test_pdf_adapter.py  test_personalization.py  test_personalized_demo.py  test_release_docs.py  (+6 more)
(+164 files in other folders)
