[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "source2study"
version = "1.5.2a0"
description = "StudyLoom: source-grounded personalized learning pack generator."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Source2Study contributors" }]
dependencies = []

[project.optional-dependencies]
pdf = ["pypdf>=4"]
dev = ["pytest>=8"]

[project.scripts]
source2study = "source2study.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
